--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="js/com/component/display/DisplayObject.js"></script>
 <script type="text/javascript" src="js/com/component/display/Stage.js"></script>
 <script type="text/javascript" src="js/com/component/display/UIElement.js"></script>
+<script type="text/javascript" src="js/com/component/display/Sprite.js"></script>
 <script type="text/javascript" src="js/com/component/display/TextField.js"></script>
 <script type="text/javascript" src="js/com/component/youtube/YoutubePlayer.js"></script>
 <script type="text/javascript" src="js/com/events/Events.js"></script>
@@ -17,6 +18,8 @@
 <script type="text/javascript" src="js/com/utils/URLLoader.js"></script>
 <script type="text/javascript" src="js/com/data/PlaylistData.js"></script>
 <script type="text/javascript" src="js/com/view/PlaylistViews.js"></script>
+<script type="text/javascript" src="js/com/utils/Timer.js"></script>
+<script type="text/javascript" src="js/Tween/Tween.js"></script>
 <script type="text/javascript" src="js/test.js"></script>
 </head>
 
