added mobile touch events and mobile detection

--- a/example/mobile/index.html
+++ b/example/mobile/index.html
@@ -13,9 +13,11 @@
 <script type="text/javascript" src="../js/com/component/display/Sprite.js"></script>
 <script type="text/javascript" src="../js/com/component/display/UIElement.js"></script>
 <script type="text/javascript" src="../js/com/utils/Timer.js"></script>
+<script type="text/javascript" src="../js/com/utils/Mobile.js"></script>
 <script type="text/javascript" src="../js/Tween/Tween.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
+version 2
 </body>
 </html>
