--- a/example/jiggyape/index.html
+++ b/example/jiggyape/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Javascript AS3 Kit</title>
 <link  type="text/css" href="css/main.css" rel="stylesheet" />
+ <meta name="viewport" content="width=device-width, user-scalable=no" />
 <!--<script type="text/javascript" src="js/javascriptToolkit.js"></script>-->
  <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js'></script>
 <script type="text/javascript" src="../js/com/core/JS3.js"></script>
